2004-05-26  Fernando Herrera  <fherrera@onirica.com>

	* modules/sftp-method.c: (invoke_fill_auth), (invoke_full_auth),
	(invoke_save_auth), (sftp_connect): Get password from keyring if
	possible. After a correct password is introduced and marked for 
	"store in keyring" store it. Also handles the case of wrong password
	in the keyring asking again for it.

2004-05-25  Alexander Larsson  <alexl@redhat.com>

	* modules/default-modules.conf (ssh): 
	* modules/Makefile.am: 
	* modules/ssh-method.c:
	Remove ssh method, alias to sftp.

2004-05-18  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-volume-monitor-daemon.c (get_device_type_from_device_and_mount):
	Figure out type by looking at mountpoint basename even outside /mnt.

2004-05-17  Christophe Fergeau  <teuf@gnome.org>

        * modules/ftp-method.c: reset connection offset in
          ftp_connection_acquire (should fix #140583)

2004-05-16  Georges Karabin  <gkarabin@pobox.com>

	* doc/writing-modules.sgml: fixed prototypes of the module virtual 
	  functions, corrected a few spelling/grammatical mistakes,
	  reformulated some sentences for clarity.

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: fix filling of the 'type' field in 
	  GnomeVFSFileInfo, fixes bug #139371

2004-05-15  Christophe Fergeau  <teuf@gnome.org>

	* modules/sftp-method.c: truncate existing files when using 
	  gnome_vfs_create, fixes bug #140551

2004-05-15  Damien Carbery  <damien.carbery@sun.com>

	* modules/sftp-method.c: remove TEMP_FAILURE_RETRY macro since it's 
	  used only once and breaks compilation on Solaris.

2004-05-15  ynakai@redhat.com

	* doc/about.sgml: use 0777 permissions instead of 0x777 in sample code

2004-05-15  Morten Welinder  <mortenw@gnome.org>

	* configure.in: fix ngettext detection on Solaris and AIX

2004-05-15  Michael Wilson <Michael.Wilson@bull.net>

	* libgnomevfs/xdgmimeglob.h: removed unnecessary comma at the end of
	  an enum
