@@ -1,3 +1,7 @@
+Thu May 27 15:59:40 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* libgnomevfs/xdgmimemagic.c: Sync from upstream.
+
 2004-05-26  Fernando Herrera  <fherrera@onirica.com>
 
 	* modules/sftp-method.c: (invoke_fill_auth), (invoke_full_auth),
